# pycem

./: README.md  pyproject.toml  setup.cfg
cem/: __init__.py  cem.py
