[metadata]
name = py-cross-entropy-method
version = 0.1.0
description = Cross-entropy method for optimization.
long_description = file: README.md

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6, < 3.8, == 3.*
install_requires =
    bottleneck ~= 1.3
    numpy ~= 1.17
    scipy ~= 1.4
    attrs ~= 19.3

[options.extras_require]
dev =
    autoflake ~= 1.3.1
    black ~= 19.10b0
    flake8 ~= 3.7.9
    mypy ~= 0.761

[mypy]
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[flake8]
max-line-length = 88
ignore = E501, E203, W503
per-file-ignores = __init__.py:F401
exclude =
    .git
    __pycache__
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache

[isort]
line_length=88
multi_line_output=3
length_sort=1

